--- a/src/app/main/reset/reset.component.html
+++ b/src/app/main/reset/reset.component.html
@@ -2,7 +2,7 @@
     <input type="password" [(ngModel)]="password"><button (click)="resetPass()">Ustal nowe hasło</button>
 </div>
 
-<div id="background_animation" style="height: 200vh; width: 200vw;">
+<div id="background_animation" style="height: 200vh; width: 200vw; overflow: hidden;">
     <span></span>
     <span></span>
     <span></span>
