--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -11,7 +11,7 @@
     </h1>
     <!-- Description -->
     <p class="overlay__description">
-      W tej aplikacji możesz stworzyć liste zakupów, a także wyszukiwać lub dodawać produkty.
+      W tej aplikacji możesz stworzyć liste zakupów, a także wyszukiwać lub dodawać produkty spożywcze.
       <strong>Skorzystaj teraz.</strong>
     </p>
     <!-- Buttons -->
