--- a/src/app/main/stuffs/stuffs.component.scss
+++ b/src/app/main/stuffs/stuffs.component.scss
@@ -118,6 +118,8 @@ $top_after: 35, 86.3, 137.6, 188.9, 240.2, 291.5, 342.8;
     font-family: 'Raleway';
     margin-top: 180px;
 
+    flex-wrap: wrap;
+
     .stuff{
         width: 260px;
         text-align: center;
