--- a/src/app/main/stuffs/stuffs.component.scss
+++ b/src/app/main/stuffs/stuffs.component.scss
@@ -109,7 +109,7 @@ $top_after: 35, 86.3, 137.6, 188.9, 240.2, 291.5, 342.8;
 }
 
 #content{
-    width: 1050px;
+    width: 1125px;
     margin: auto;
 
     display: flex;
@@ -124,7 +124,7 @@ $top_after: 35, 86.3, 137.6, 188.9, 240.2, 291.5, 342.8;
         width: 260px;
         text-align: center;
     
-        margin: 35px auto;
+        margin: 35px 55px;
         position: relative;
     
         box-shadow: 2px 3px 13px -7px rgba(66, 68, 90, 1);
