--- a/src/app/main/stuffs/stuffs.component.html
+++ b/src/app/main/stuffs/stuffs.component.html
@@ -1,3 +1,10 @@
+<div id="wait">
+    <div class="lds-roller">
+        <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+    </div>
+</div>
+
+
 <div class="bg">
 </div>
 
