--- a/src/app/main/stuffs/stuffs.component.html
+++ b/src/app/main/stuffs/stuffs.component.html
@@ -1,9 +1,8 @@
-<div id="wait">
+<div *ngIf="!isset" id="wait">
     <div class="lds-roller">
         <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
     </div>
 </div>
-
 
 <div class="bg">
 </div>
