--- a/src/app/main/stuffs/details/details.component.scss
+++ b/src/app/main/stuffs/details/details.component.scss
@@ -8,7 +8,7 @@ $width_image: 450px;
     bottom: 0;
     right: 0;
 
-    background: linear-gradient(0deg, rgba(215,78,133,1) 10%, rgba(203,61,108,1) 60%, rgba(193,54,128,1) 96%);
+    background: #f9f9f9;
     z-index: -10;
 }
 
