--- a/src/app/main/stuffs/basket/basket.component.scss
+++ b/src/app/main/stuffs/basket/basket.component.scss
@@ -1,13 +1,13 @@
 .show ::ng-deep{
     display: block;
-    margin-top: 27px;
-    position: absolute;
+    position: relative;
     z-index: 999;
-    background-color: rgb(248, 248, 248);
-    border: 1px solid rgb(160, 160, 160);
+    background-color: rgb(255, 255, 255);
     left: 50%;
     transform: translate(-50%, 0);
-    width: 90%;
+    width: 94%;
+    min-height: 50px;
+    padding-bottom: 50px;
 }
 
 .hide ::ng-deep{
@@ -18,7 +18,7 @@
     width: 270px;
     font-family: "Raleway";
     background-color: rgb(130, 233, 173);
-    border-radius: 23px;
+    border-radius: 3px;
     padding: 6px 5px 0px 5px;
     position: relative;
     height: 49px;
@@ -50,8 +50,12 @@
             margin-left: 4px;
             background-color: #fdfdfd;
 
+            width: 30px;
+            height: 30px;
+
             mat-icon{
-                line-height: 28px;
+                line-height: 25px;
+                margin-left: -2px;
             }
         }
 
@@ -64,18 +68,26 @@
         }
 
         button{
-            background-color: #f5f5f5;
-            border-radius: 3px;
-            border: 1px solid #d2d2d2;
+            background-color: #7fd9af;
+            border-radius: 4px;
             margin-left: 5px;
+            border: 1px solid #919090;
+            color: aliceblue;
         }
     }
     
     #arrow{
         position: absolute;
-        top: 120%;
+        top: 15px;
         left: 50%;
         transform: translate(-50%, -50%);
+
+        &.move{
+            top: auto;
+            transform: rotate(180deg) translate(-50%, -50%);
+            bottom: -15px;
+            left: 35%;
+        }
         
         mat-icon{
             font-size: 36px;
