update basket details component
styles in this component have been changed

--- a/src/app/main/stuffs/basket/basket-details/basket-details.component.scss
+++ b/src/app/main/stuffs/basket/basket-details/basket-details.component.scss
@@ -2,7 +2,7 @@
     position: fixed;
     height: 100vh;
     width: 100% !important;
-    background: linear-gradient(0deg, rgba(215,78,133,1) 10%, rgba(203,61,108,1) 60%, rgba(193,54,128,1) 96%);
+    background: whitesmoke;
     margin: 0;
     max-height: none;
     border-radius: 0;
