--- a/src/app/main/stuffs/stuffs.component.html
+++ b/src/app/main/stuffs/stuffs.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!isset" id="wait">
+<div *ngIf="stuffService.stuffs.length < 36" id="wait">
     <div class="lds-roller">
         <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
     </div>
