--- a/src/app/main/add-stuff/add-stuff.component.html
+++ b/src/app/main/add-stuff/add-stuff.component.html
@@ -26,7 +26,7 @@
         <input type="number" name="price" ngModel>
     
         <label>Zdjęcie produktu:</label>
-        <ngx-dropzone [multiple]="false" (change)="onSelect($event, fileStuff)">
+        <ngx-dropzone [multiple]="false" (change)="onSelect($event, filesStuff)">
             <ngx-dropzone-label><mat-icon>add_photo_alternate</mat-icon></ngx-dropzone-label>
             <ngx-dropzone-preview *ngFor="let f of filesStuff" [removable]="true" (removed)="onRemove(f, fileStuff)">
                 <ngx-dropzone-label>{{ f.name }} ({{ f.type }})</ngx-dropzone-label>
